# lchat

./: .gitignore  AUTHORS  ChangeLog  Changelog  LICENSE  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac
.github/workflows/: c-cpp.yml  codeql-analysis.yml
extra/: Makefile.am  lchatd  lchatd.service.in
include/: Makefile.am  _p_curses  curses  nstream
man/: Makefile.am  lchat.1  lchat.1.in  lchatd.1  lchatd.1.in
src/: Makefile.am  autocomplete.cpp  autocomplete.h  curses.cpp  fortune-bot.sh  lchat.cpp  lchatd.cpp  nstream.cpp
